
Format:
* what about empty binary xml data in the event record? does it only contain a 0x00 byte?

Debug:
* libfwevt: character reference print trailing data
* handle empty XML document:
  libevtx_record_values_read_xml_document: XML document:
  libfwevt_xml_tag_debug_print: invalid XML tag.

Recovery:
* scan for records in chunk free space

20130923
* updated dependencies

20130909
* updated dependencies
* worked on libcthreads build support

20130727
* updated dependencies
* pyevtx
  - changed event identifier to an unsigned long
  - fixes for >2G file objects in BFIO glue code

20130718
* updated dependencies
* removed unnecessary restriction in library include headers

20130713
* worked on tests
* improved reading from dirty files with an incorrect number of chunks

20130712
* fix for encoding special characters in XML output
* code clean up
* pyevtx small changes to docstrings
* worked on tests
* updated dependencies
* added support for parsing ProcessingErrorData

20130609
* updated dependencies

20120521
* worked on improving corruption detection for recovered records

20120421
* worked on tests
* updated dependencies
* bug fixes in binary xml parsing

20120418
* fixed issue for uftf16 base16 string too small

20120417
* comparing the results of various builds

20120414
* textual changes
* code clean up

20120413
* updated dependencies
* fixed codepage 1255 restriction
* worked on tests
* updates and bug fixes in pyevtx
* improvements to message string support

20120329
* bug fix for recent libfdata changes
* updated dependencies

20120319
* updated dependencies
* changes for libfdata update

20130307
* updated macosx files

20130303
* added PackageMaker files

20130301
* fixed bug in handling recovered records when no records are available

20130226
* worked on error tolerance
* added debug output for file flags

20130210
* updated libcfile to allow reading from open files
* fixed incorrect name of resulting evtxexport binary in msvscpp files

20130209