@@ -48,9 +48,14 @@ pyevtx_la_LDFLAGS  = -module -avoid-version $(PYTHON_LDFLAGS)
 
 endif
 
+EXTRA_DIST = \
+	setup.py \
+	setup.py.in
+
 MAINTAINERCLEANFILES = \
 	Makefile.in
 
 distclean: clean
+	/bin/rm -f setup.py
 	/bin/rm -f Makefile
 
